media/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-svc
  namespace: media
spec:
  selector:
    app: sabnzbd
  ports:
    - name: http
      port: 8080
      targetPort: 8080
